--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ crashlytics-build.properties
 # Folders that contain large amount of data
 Assets/Data/
 Assets/Resources/
+
+
+# Ignore Unity cloud files
+.plastic/
+hidden_changes.conf
